fix overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@
   height: 100%;
   max-width: 1500px;
   padding: 48px;
+  overflow-x: hidden;
 }
 
 .accent-text {
